@@ -45,25 +45,158 @@ jason-sender-a751af@mastaler.com
 This particular sender address will only accept messages from
 <em>president@whitehouse.gov</em>.  Other messages must go through
 the confirmation process.
+<br><br>
+
+Sender addresses are often used to subscribe to mailing lists.  This
+way, you don't have to worry that the subscription list might get
+harvested by spammers since only the mailing list software will be
+able to send messages there.  The address to use can be found in the
+<b>Return-Path</b> header of a mailing list message (e.g, subscribe
+to the Python list with a sender address based on <python-list-admin@python.org>.
 </ul><br>
 </ul>
 
-The <b>tmda-sendmail</b> command is invoked from your client to
-automatically add the proper tag to your e-mail address and
-then send your message.
+<u>Keyword Addresses</u><br><br>
+<ul>
+TMDA can also tag your messages with a keyword address which will work
+for any sender and indefinitely unless specifically revoked.  Any string
+can be used as the keyword.
+
+Here is an example keyword address using the keyword `promos':
+
+<blockquote><pre>
+jason-promos.8d06eu@mastaler.com
+</pre></blockquote>
+
+Keyword addresses are appropriate when you need to hand-out
+a working address, but you don't want its use limited to a particular
+sender or time frame.  They are particularily useful in cases where
+you are not be able to predict the sender address such as with
+automated mailings (your ISP, your Amazon.COM account, etc.).
 <br><br>
+
+The caveat of course is that since keyword addresses are essentially
+keys to your inbox, you must manually intervene if the address starts
+getting spammed.  An easy way to do this is to add the harvested
+keyword address to your <b>~/.tmda/lists/revoked</b> file.
+</ul><br>
+</ul>
+
+The utilities <b>tmda-dated-address</b>, <b>tmda-sender-address</b> and 
+<b>tmda-keyword-address</b> are included to generate the various types
+of addresses from the command line.  Run the utility with the <b>-h</b> flag
+to get usage information (e.g, <code>tmda-dated-address -h</code>).
+<br><br> 
+
+<li>list files:<br><br>
+
+TMDA determines how to tag your outgoing mail by scanning though a set of
+text files in <b>~/.tmda/lists/</b>.  Here are the available list files:
+
+<blockquote><pre>
+bare (don't tag)
+dated (tag with a dated address)
+sender (tag with a sender address)
+keyword (tag with a keyword address)
+exp (use an explicit address)
+ext (add an extension to the address)
+</pre></blockquote>
+
+See the "User configurable settings" section in
+<strong>Defaults.py</strong> for more information on these files.
+<br><br>
+
+Similar to the whitelist, the list files contain e-mail addresses
+and/or wildcard patterns, one per line.  See the 
+<a href="faq.html">FAQ</a> for details on matching syntax.  
+A match in one of the list files determines the tag.  For example, if
+<em>you@domain.dom</em> is listed in <b>sender</b>, mail sent there will
+be tagged with a sender address.  If the destination address isn't 
+listed in any of the files, or if the list files don't exist, the 
+message will be tagged with a dated address.  You can change this default
+by defining <strong>COOKIE_TYPE</strong> in your .tmdarc
+<br><br>
+
+<li>X-TMDA header:<br><br>
+You can override any declarations you might have in your list files by
+adding this header when composing a message.
+TMDA will look for it first when determining how to
+tag the message.  The header will be removed just before the message is
+sent.  Here is how it can be used:
+<br>
+<ul>
+<table cellpadding=8 cellspacing=2>
+
+<tr>
+<td><code>
+X-TMDA: bare
+</td></code>
+<td>
+Send the message to all recipients with your address untagged (no cookie added)
+</td>
+</tr>
+
+<tr>
+<td><code>
+X-TMDA: dated
+</td></code>
+<td>
+Send the message to all recipients with a dated address (default timeout interval)
+</td>
+</tr>
+
+<tr>
+<td><code>
+X-TMDA: dated 3M
+</td></code>
+<td>
+Send the message to all recipients with a dated address that expires in 3 months
+</td>
+</tr>
+
+<tr>
+<td><code>
+X-TMDA: sender
+</td></code>
+<td>
+Send the message to all recipients with a sender cookie added to your address
+</td>
+</tr>
+
+<tr>
+<td><code>
+X-TMDA: keyword promos
+</td></code>
+<td>
+Send the message to all recipients with a keyword (promos) cookie added to your address
+</td>
+</tr>
+
+<tr>
+<td><code>
+X-TMDA: exp postmaster@xemacs.org
+</td></code>
+<td>
+Send the message to all recipients from postmaster@xemacs.org
+</td>
+</tr>
+<tr>
+<td><code>
+X-TMDA: ext mlist-xemacs-beta
+</td></code>
+<td>
+Send the message to all recipients from jason-mlist-xemacs-beta@mastaler.com
+</td>
+</tr>
+</table>
+</ul>
+</ul>
 
 <li>.tmdarc configuration:<br><br>
 
 Make sure that you use the same .tmdarc on your mail server as you do
-on your client, so that requires settings such as CRYPT_KEY
+on your client, so that required settings such as CRYPT_KEY
 match.<br><br>
-
-The tag that gets added to your address in your outgoing mail depends
-on how you have configured your .tmdarc.  Unless you tell it
-differently, TMDA will by default tag your outgoing address with a dated cookie.
-For other options, see the "User configurable
-settings" section in <strong>Defaults.py</strong>.<br><br>
 
 <strong>NOTE:</strong>
 
@@ -79,11 +212,12 @@ in your <b>.tmdarc</b> to reverse this behavior.
 
 <li>Mail User Agent (MUA) configuration:<br><br>
 
-To have TMDA read your .tmdarc each time it sends outgoing mail and
+To have TMDA read your configuration each time you send outgoing mail and
 modify your sender address accordingly, you must arrange for your MUA
-to call the included sendmail compatibility wrapper.  Here is how to
-accomplish this for a few popular MUAs.  Let me know if you are using
-TMDA with a MUA not listed here.<br><br>
+to call the included sendmail compatibility wrapper
+<B>(tmda-sendmail)</B>.  Here is how to accomplish this for a few
+popular MUAs.  Let me know if you are using TMDA with a MUA not listed
+here.<br><br>
 
 <ul>
 <li>For BSD Mail/mailx, add the following line to your .mailrc file:<br>
@@ -144,79 +278,7 @@ add the following line to your .gnus file:<br>
 </ul>
 </ul>
 
-<li>X-TMDA header:<br><br>
-You can override any declarations you might have in your list files by
-adding this header when composing a message.
-TMDA will look for it when determining how to
-tag the message.  The header will be removed before the message is
-sent.  Here is how it can be used:
-<br>
-<ul>
-<table cellpadding=8 cellspacing=2>
-
-<tr>
-<td><code>
-X-TMDA: bare
-</td></code>
-<td>
-Sends the message to all recipients with your address untagged (no cookie added)
-</td>
-</tr>
-
-<tr>
-<td><code>
-X-TMDA: dated
-</td></code>
-<td>
-Send the message to all recipients with a dated address (default timeout interval)
-</td>
-</tr>
-
-<tr>
-<td><code>
-X-TMDA: dated 3M
-</td></code>
-<td>
-Send the message to all recipients with a dated address that expires in 3 months
-</td>
-</tr>
-
-<tr>
-<td><code>
-X-TMDA: sender
-</td></code>
-<td>
-Send the message to all recipients with a sender cookie added to your address
-</td>
-</tr>
-
-<tr>
-<td><code>
-X-TMDA: exp postmaster@xemacs.org
-</td></code>
-<td>
-Send the message to all recipients from postmaster@xemacs.org
-</td>
-</tr>
-<tr>
-<td><code>
-X-TMDA: ext mlist-xemacs-beta
-</td></code>
-<td>
-Send the message to all recipients from jason-mlist-xemacs-beta@mastaler.com
-</td>
-</tr>
-</table>
-</ul>
-</ul>
-
-
-
-<li>Miscellaneous:<br><br>
-Two utilities <b>tmda-dated-address</b> and
-<b>tmda-sender-address</b> are included to generate <em>dated</em>
-and <em>sender</em> style addresses from the command line.
-<br><br> 
+<li>USENET News Client configuration:<br><br>
 
 If you still read <a href="http://www.usenet.org/" TARGET="Resource Window">USENET</a> 
 (a notorious source of SPAM), you might find it useful to post using a dated address.  
@@ -237,24 +299,3 @@ be accomplished with the following addition to your .gnus file:
        (address tmda-dated-address))) 
 
 </pre></blockquote>
-
-<strong>tmda-sender-address</strong> can be used to generate
-subscription addresses for mailing lists without worry that the
-subscription list might get harvested by spammers.  The address to use
-can be found in the <b>Return-Path</b> header of a mailing list message.
-
-  For example:
-  
-<blockquote>
-<pre>
-
-$ tmda-sender-address python-list-admin@python.org | more
-
-  jason-sender-2cd688@mastaler.com
-
-</pre></blockquote>
-
-(now subscribe to python-list using this sender-address, and only
-python-list-admin@python.org will be able to send mail there)<br><br>
-
-</ul>
