@@ -1,3 +1,7 @@
+2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* CRYPTO: Added keyword address description.
+
 2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* README: TMDA 0.38 is released.
